# ntfyer

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  setup.cfg  setup.py
ntfy/: main.py
ntfyer/: main.py
src/ntfyer/: main.py  settings.json
