[project]
name = "ntfy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "pendulum>=3.1.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
ntfy = "ntfy.main:cli"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
