[project]
name = "ntfyer"
version = "1.0.0-alpha"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "pendulum>=3.1.0",
    "sqlalchemy>=2.0.43",
]

[project.scripts]
ntfy = "ntfyer.main:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
