[project]
name = "ntfyer"
version = "1.0.0a0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "pendulum>=3.1.0",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ntfyer = "ntfyer.main:cli"
